--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "react-top-loading-bar": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
